# lutin

./: .dockerignore  .gitignore  Cargo.toml  IMAGE_WORKFLOW_PLAN.md  MOBILE_WEB_PLAN.md  PRINCIPLED_WORKFLOW_PLAN.md  STT_UI_PLAN.md  SUBWORKFLOW_PLAN.md  TAURI_MIGRATION_PLAN.md  TTS_MIGRATION_PLAN.md  package.json
crates/lutin-agent-sdk/: Cargo.toml
crates/lutin-agent-sdk/src/: agent.rs  approval.rs  config.rs  error.rs  event.rs  lib.rs  loop_control.rs  outcome.rs  projection.rs  sampling.rs  tools.rs
crates/lutin-agent-sdk/src/run/: detect.rs  mod.rs  recovery.rs  round.rs
crates/lutin-agent-sdk/tests/: behavior.rs  extensions.rs  shell_cancel.rs  smoke.rs
crates/lutin-agent-sdk/tests/support/: mod.rs
crates/lutin-auth/: Cargo.toml
crates/lutin-auth/src/: lib.rs
crates/lutin-control-protocol/: Cargo.toml
crates/lutin-control-protocol/src/: lib.rs
crates/lutin-entities/: Cargo.toml
crates/lutin-entities/src/: lib.rs  persona.rs  skill.rs  variable.rs
crates/lutin-llm/: Cargo.toml
crates/lutin-llm/src/: context.rs  ids.rs  lib.rs  mock.rs  ollama.rs  openai_compat.rs  openai_compat_provider.rs  openrouter.rs  types.rs
crates/lutin-llm/src/anthropic/: billing.rs  messages.rs  mod.rs  oauth.rs  store.rs
crates/lutin-memory/: Cargo.toml  PLAN.md
crates/lutin-memory/examples/: openrouter_demo.rs
crates/lutin-memory/examples/fixtures/: conversations.json
crates/lutin-memory/src/: agent.rs  event.rs  lib.rs  llm_summarizer.rs  python.rs  schema.rs  store.rs  summarizer.rs
crates/lutin-project-protocol/: Cargo.toml
crates/lutin-project-protocol/src/: lib.rs
crates/lutin-session-protocol/: Cargo.toml
crates/lutin-session-protocol/src/: lib.rs
crates/lutin-storage/: Cargo.toml
crates/lutin-storage/src/: blobs.rs  kv.rs  lib.rs  resolver.rs  snapshots.rs  transcript.rs
crates/lutin-storage/tests/: storage.rs
crates/lutin-stt/: Cargo.toml
crates/lutin-stt/src/: backend.rs  lib.rs  parakeet.rs  whisper.rs
crates/lutin-tools/: Cargo.toml
crates/lutin-tools/src/: builders.rs  context.rs  file_edit.rs  file_edit_lines.rs  file_glob.rs  file_grep.rs  file_list.rs  file_read.rs  file_tree.rs  file_write.rs  http_request.rs  image_view.rs  lib.rs  multi.rs  outcome.rs  read_state.rs  shell.rs  wait.rs  web_search.rs
crates/lutin-tools/tests/: shell_cancel.rs  smoke.rs
crates/lutin-tts/: Cargo.toml  build.rs
crates/lutin-tts/src/: backend.rs  lib.rs  service.rs
crates/lutin-tts/src/orpheus/: mod.rs  snac.rs
crates/lutin-ui/: Cargo.toml
crates/lutin-ui/examples/: gallery.rs  realistic.rs
crates/lutin-ui/src/: font.rs  lib.rs
crates/lutin-ui/src/markdown/: mod.rs  parser.rs  renderer.rs
crates/lutin-ui/src/theme/: components.rs  dark.rs  mod.rs  tokens.rs
crates/lutin-ui/src/widget/: badge.rs  button.rs  card.rs  context_menu.rs  divider.rs  dropdown.rs  icon.rs  icon_catalog.rs  kbd.rs  list.rs  mod.rs  modal.rs  panel.rs  table.rs  terminal.rs  text_input.rs  timeline.rs  toggle.rs
crates/lutin-workflow-sdk/: Cargo.toml
crates/lutin-workflow-sdk/src/: agent.rs  compaction.rs  idle.rs  lib.rs  prompt.rs  state.rs  summary.rs  transcript.rs
lutin-control-panel/: .env.example  .gitignore  Cargo.toml  build.rs
lutin-control-panel/src/: defaults.rs  downloads.rs  lib.rs  main.rs  registry.rs  session_index.rs  session_summary.rs  sessions.rs  settings_io.rs  transcribe.rs  transcription_streams.rs  tts.rs  tts_streams.rs  workflow_images.rs
lutin-control-panel/tests/: loop.rs  spawn.rs
lutin-desktop/: Cargo.toml  overlay.html  package.json  vite.config.ts
lutin-desktop/src/: App.module.css  App.tsx  api.ts  app.rs  appKeybinds.ts  bridge.rs  fuzzy.ts  lib.rs  loader.rs  main.rs  proj.rs  quickChat.ts  relativeTime.ts  settings.rs  store.ts  theme.css  types.ts
lutin-desktop/src-tauri/: Cargo.toml  tauri.conf.json
lutin-desktop/src-tauri/shim/: lutin.js
lutin-desktop/src-tauri/src/: audio.rs  bridge.rs  bundles.rs  capability.rs  cp.rs  dispatch.rs  keybind.rs  keybind_portal.rs  lib.rs  main.rs  overlay.rs  plugin_protocol.rs  settings.rs  shim_protocol.rs  transcribe.rs  tts_dispatch.rs  tts_playback.rs
lutin-desktop/src/components/: CreateProjectModal.tsx  LeaderHints.module.css  LeaderHints.tsx  Modal.module.css  Modal.tsx  Picker.tsx  PluginIframe.tsx  ProjectPicker.tsx  RowMenu.tsx  Select.module.css  Select.tsx  SessionPane.module.css  SessionPane.tsx  SessionPicker.tsx  SettingsView.module.css  SettingsView.tsx  Sidebar.module.css  Sidebar.tsx  TopBar.module.css  TopBar.tsx  TtsDownloadToast.tsx  WorkflowIcon.tsx  WorkflowPicker.tsx  sessionTime.ts
lutin-desktop/src/overlay/: OverlayApp.tsx  main.tsx  overlay.css  overlay.module.css
lutin-desktop/src/view/: main.rs  secrets.rs  sidebar.rs  top_bar.rs
lutin-project/: Cargo.toml  Dockerfile
lutin-project/src/: build.rs  lib.rs  main.rs  session.rs  workflows.rs
lutin-project/tests/: sessions.rs
lutin-project/tests/fixtures/stub-workflow/: Cargo.toml  manifest.toml
workflows/chat/: Cargo.toml  Dockerfile  manifest.toml
workflows/chat/src/: agents.rs  engine.rs  lib.rs  metrics.rs  store.rs  ui.rs
workflows/chat/src/tools/: agent.rs
workflows/chat/ui/: index.html  package.json  tsconfig.json
workflows/chat/ui/public/: lutin.workflow.json
workflows/chat/ui/src/: App.tsx  PersonaComposer.module.css  PersonaComposer.tsx  adapter.ts  chat.ts  golden.test.ts  lutin.ts  main.tsx  session.test.ts  session.ts  tts.ts
workflows/image/: Cargo.toml  Dockerfile  manifest.toml
workflows/image/scripts/: smoketest.py
workflows/image/src/: comfy.rs  engine.rs  lib.rs  settings.rs  store.rs  summary.rs
workflows/image/ui/: index.html  package.json  vite.config.ts
workflows/image/ui/src/: App.module.css  App.tsx  lutin.ts  main.tsx  vite-env.d.ts
workflows/scratchpad/: Cargo.toml  Dockerfile  PLAN.md  build.rs  manifest.toml
workflows/scratchpad/src/: engine.rs  lib.rs  reviewer.rs  runner.rs  runtime.rs  serve.rs  store.rs  types.rs  wire.rs
workflows/scratchpad/ui/: index.html  package.json
workflows/scratchpad/ui/src/: App.tsx  (+9 more)
(+158 files in other folders)
