[package]
name = "lutin-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
lutin-protocol = { path = "../crates/lutin-protocol" }
lutin-control-protocol = { path = "../crates/lutin-control-protocol" }
lutin-project-protocol = { path = "../crates/lutin-project-protocol" }
lutin-workflow-ui = { path = "../crates/lutin-workflow-ui" }
lutin-ids = { path = "../crates/lutin-ids" }
lutin-storage = { path = "../crates/lutin-storage" }
lutin-ui = { path = "../crates/lutin-ui" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
egui = { version = "0.34.1", default-features = false, features = ["serde"] }

anyhow = "1"
futures-util = "0.3"
url = "2"
tokio = { version = "1.52", features = ["full"] }
tokio-tungstenite = "0.29"
libloading = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
