[package]
name = "lutin-entities"
edition.workspace = true
version.workspace = true

[dependencies]
lutin-ids = { path = "../lutin-ids" }
lutin-storage = { path = "../lutin-storage" }
serde = { version = "1", features = ["derive"] }
toml = "1.1"
thiserror = "2"

[dev-dependencies]
tempfile = "3.27.0"
