[package]
name = "lutin-memory"
version = "0.1.0"
edition = "2024"

[features]
default = ["llm-summarizer", "memory-agent"]
llm-summarizer = ["dep:lutin-llm"]
memory-agent = ["llm-summarizer"]

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
lutin-llm = { workspace = true, optional = true }
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }
rusqlite = { version = "0.39.0", features = ["bundled", "serde_json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["sync", "rt", "macros", "time"] }
tracing = "0.1.44"

[dev-dependencies]
futures = "0.3.32"
lutin-llm = { workspace = true }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "time"] }
