[package]
name = "lutin-session-protocol"
edition.workspace = true
version.workspace = true

[dependencies]
lutin-ids = { version = "0.1.0", path = "../lutin-ids" }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
