[package]
name = "lutin-storage"
edition.workspace = true
version.workspace = true

[dependencies]
hex = "0.4.3"
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
sled = "0.34.7"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
