[package]
name = "lutin-tools"
version.workspace = true
edition.workspace = true

[dependencies]
lutin-llm = { workspace = true }
async-trait = "0.1.89"
base64 = "0.22.1"
dom_smoothie = "0.17.0"
globset = "0.4.18"
htmd = "0.5.4"
ignore = "0.4.25"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt", "fs", "process", "sync", "time", "macros", "io-util"] }
tracing = "0.1.44"
url = "2.5.8"

[dev-dependencies]
tempfile = "3.27.0"
