[package]
name = "lutin-tts"
edition.workspace = true
version.workspace = true

[dependencies]
thiserror = "2"
tracing = "0.1"
tokio = { version = "1.52", features = ["sync", "rt"] }
crossbeam-channel = "0.5"
encoding_rs = "0.8"

llama-cpp-2 = { version = "0.1.143", features = ["vulkan"] }
ort = "2.0.0-rc.12"
