[package]
name = "lutin-ui"
version.workspace = true
edition.workspace = true

[dependencies]
arc-swap = "1.9.1"
egui = { version = "0.34.1", default-features = false, features = ["serde"] }
pulldown-cmark = "0.13.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = { version = "3.1.0", features = ["text"] }
syntect = "5.3.0"
webbrowser = "1.2.0"

[dev-dependencies]
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
