[package]
name = "lutin-workflow-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
lutin-agent-sdk = { workspace = true }
lutin-entities = { workspace = true }
lutin-llm = { workspace = true }
lutin-settings = { workspace = true }
lutin-tools = { workspace = true }

chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
toml = "1.1"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tracing = "0.1"
