[package]
name = "lutin-desktop"
version.workspace = true
edition.workspace = true
description = "Lutin desktop chrome (Tauri 2)"

[lib]
# `_lib` suffix kept per Tauri scaffold — avoids Windows bin/lib name
# collision (rust-lang/cargo#8519). Bin entry is `main.rs`.
name = "lutin_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lutin-control-protocol = { path = "../../crates/lutin-control-protocol" }
lutin-protocol = { path = "../../crates/lutin-protocol" }
lutin-ids = { path = "../../crates/lutin-ids" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1"
thiserror = "2"
tokio = { version = "1.52", features = ["full"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
url = "2"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tar = "0.4"
