[package]
name = "lutin-desktop"
version.workspace = true
edition.workspace = true
description = "Lutin desktop chrome (Tauri 2)"

[lib]
# `_lib` suffix kept per Tauri scaffold — avoids Windows bin/lib name
# collision (rust-lang/cargo#8519). Bin entry is `main.rs`.
name = "lutin_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lutin-control-protocol = { path = "../../crates/lutin-control-protocol" }
lutin-protocol = { path = "../../crates/lutin-protocol" }
lutin-ids = { path = "../../crates/lutin-ids" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1"
thiserror = "2"
tokio = { version = "1.52", features = ["full"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
url = "2"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tar = "0.4"
cpal = "0.17"
# `wayland-data-control` makes arboard talk wlr-data-control directly
# when `WAYLAND_DISPLAY` is set, instead of falling back to XWayland's
# X11 clipboard. Without it, copies on Hyprland/wlroots compositors
# land on the XWayland clipboard only and native Wayland apps never see
# them (manifests as "PTT-to-clipboard does nothing when pasting").
arboard = { version = "3", features = ["wayland-data-control"] }
async-trait = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
# Wayland compositors don't allow X11-style global key grabs. Under
# Wayland we register shortcuts via the xdg-desktop-portal
# GlobalShortcuts interface and let the compositor own the actual key
# bindings (Hyprland: `bind = , Numpad1, global, lutin:lutin-kb-0`).
# Outside Linux this stays out of the dependency tree entirely.
ashpd = { version = "0.13", features = ["tokio", "global_shortcuts"] }
futures-core = "0.3"
