[package]
name = "chat"
edition = "2024"
version = "0.1.0"

# Standalone crate — workflows are deliberately NOT workspace members
# (see PLAN.md). The empty [workspace] table tells cargo to treat this
# crate as its own workspace root rather than walk up to the parent.
[workspace]

[[bin]]
name = "chat"
path = "src/engine.rs"

[lib]
path = "src/lib.rs"
# `lib` keeps the rlib so the engine `[[bin]]` (and tests) can `use chat::*`.
# `cdylib` produces the `.so` the desktop chrome dlopens for the UI.
crate-type = ["lib", "cdylib"]

[dependencies]
lutin-agent-sdk = { path = "../../crates/lutin-agent-sdk" }
lutin-auth = { path = "../../crates/lutin-auth" }
lutin-entities = { path = "../../crates/lutin-entities" }
lutin-ids = { path = "../../crates/lutin-ids" }
lutin-keypair = { path = "../../crates/lutin-keypair" }
lutin-llm = { path = "../../crates/lutin-llm" }
lutin-protocol = { path = "../../crates/lutin-protocol" }
lutin-settings = { path = "../../crates/lutin-settings" }
lutin-storage = { path = "../../crates/lutin-storage" }
lutin-workflow-sdk = { path = "../../crates/lutin-workflow-sdk" }
lutin-tools = { path = "../../crates/lutin-tools" }
lutin-workflow-ui = { path = "../../crates/lutin-workflow-ui" }

egui = { version = "0.34.1", default-features = false, features = ["serde"] }

anyhow = "1"
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }
thiserror = "2"
toml = "1.1"
tokio = { version = "1.52", features = ["full"] }
tokio-tungstenite = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
