[package]
name = "scratchpad"
edition = "2024"
version = "0.1.0"

# Standalone crate — workflows are deliberately NOT workspace members.
# The empty [workspace] table tells cargo to treat this crate as its
# own workspace root rather than walk up to the parent.
[workspace]

[[bin]]
name = "scratchpad"
path = "src/engine.rs"

[lib]
path = "src/lib.rs"

[dependencies]
lutin-agent-sdk = { path = "../../crates/lutin-agent-sdk" }
lutin-auth = { path = "../../crates/lutin-auth" }
lutin-entities = { path = "../../crates/lutin-entities" }
lutin-ids = { path = "../../crates/lutin-ids" }
lutin-keypair = { path = "../../crates/lutin-keypair" }
lutin-llm = { path = "../../crates/lutin-llm" }
lutin-protocol = { path = "../../crates/lutin-protocol" }
lutin-settings = { path = "../../crates/lutin-settings" }
lutin-storage = { path = "../../crates/lutin-storage" }
lutin-workflow-sdk = { path = "../../crates/lutin-workflow-sdk" }
lutin-tools = { path = "../../crates/lutin-tools" }

anyhow = "1"
async-trait = "0.1.89"
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
postcard = { version = "1.1.3", features = ["alloc"] }
thiserror = "2"
toml = "1.1"
tokio = { version = "1.52", features = ["full"] }
tokio-tungstenite = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
