[package]
name = "stub"
edition = "2024"
version = "0.1.0"

# Standalone crate — opt out of the parent workspace so this fixture
# builds in isolation, matching the real workflow layout.
[workspace]

[[bin]]
name = "stub"
path = "src/main.rs"

[dependencies]
anyhow = "1"
tokio = { version = "1.52", features = ["full"] }
